--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.baremetalstudios</groupId>
 	<artifactId>miniCAM</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
+	<version>1.2.0_java_7-SNAPSHOT</version>
 	<name>miniCAM</name>
 	<description>Simple CAM processor for generation of outline/drill G-Code program from PCB panel Gerber/Excellon files</description>
 	<packaging>jar</packaging>
@@ -62,8 +62,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.2</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>1.7</source>
+						<target>1.7</target>
 					</configuration>
 				</plugin>
 			</plugins>
